修改：      admin/urls.py 	修改：      customization/views.py 	修改：      visualization/elasticsedata.py 	修改：      visualization/static/css/main.css 	修改：      visualization/static/js/map.js 	修改：      visualization/static/js/post_modify.js 	修改：      visualization/templates/conf_dashboard.html 	修改：      visualization/templates/dashboard1.html 	修改：      visualization/templates/dashboard2.html 	修改：      visualization/templates/json/chart_template.json 	修改：      visualization/templates/manage_pic.html 	修改：      visualization/templates/menu.html 	删除：      visualization/templates/money_of_all.html 	删除：      visualization/templates/order_count.html 	删除：      visualization/templates/product_count.html 	删除：      visualization/templates/site_data.html 	修改：      visualization/views.py 	visualization/static/js/conf_dashboard.js 	visualization/static/js/post_get_product_count.js 	visualization/templates/temp_for_gen.html

--- a/visualization/templates/conf_dashboard.html
+++ b/visualization/templates/conf_dashboard.html
@@ -3,6 +3,37 @@
 {% block title %} Acttao监控平台{% endblock %}
 
 {% block content %}
-<div class='main_window'>conf_dashboard</div>                                                          
+<div class='main_window'>
+    <script type="text/javascript" src="static/js/conf_dashboard.js"></script>
+    <script tpye="text/javascript">
+        window.c=0;
+        function doCheck(obj){
+            obj.checked?window.c++:window.c--;
+            if ($("input[type='radio']:checked").val() ==='dashboard1'){
+                limit = 4;
+            }
+            if ($("input[type='radio']:checked").val() ==='dashboard2') {
+                limit = 3;
+            }
+            if(window.c>limit){
+                obj.checked=false;
+                window.c--;
+                alert("超过最多图表数目!");
+            }
+        };
+    </script>
+
+    <form>
+        <label for="dashboard1">dashboard1</label>
+        <input type="radio" value="dashboard1" name="dashboard" id="dashboard1" checked="checked" />
+        &nbsp
+        <label for="dashboard2">dashboard2</label>
+        <input type="radio" value="dashboard2" name="dashboard" id="dashboard2" /><br />
+        {% for monitor_name in monitor_names %}
+        <label><input type="checkbox" name="monitor_name" onClick="doCheck(this)" value="{{ monitor_name  }}" /> {{ monitor_name }} </label><br />
+        {% endfor %}
+        <input type='button' id='conf_dashboard_yes' value="确定" />
+    </form>
+</div>                                                          
 {% endblock %}
         
