--- a/visualization/templates/menu.html
+++ b/visualization/templates/menu.html
@@ -30,11 +30,7 @@
                 </li>
                 <li><a href="#">业务监控</a>
                     <ul>
-                        <li><a href="#">商品总数</a></li>
-                        <li><a href="#">订单数</a></li>
-                        <li><a href="#">分省成交金额</a></li>
-                        <li><a href="#">总成交金额</a></li>
-                        <li><a href="#">DAU/MAU/PV</a></li>
+                        <li><a href="/busniss_data">业务数据数</a></li>
                     </ul>
                 </li>
                 <li><a href="/base_monitor">基础监控</a></li>
