--- a/visualization/static/css/main.css
+++ b/visualization/static/css/main.css
@@ -1,6 +1,8 @@
 .main_window {
     width:1050px;
-    border:1px solid black;
+    height:600px;
+    overflow: auto;
+    border:2px solid black;
     position:absolute;
     left:200px;
     top:64px;
