--- a/visualization/templates/dashboard1.html
+++ b/visualization/templates/dashboard1.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    <title>ACTTAO 监控</title>
-    <style>
-        .wrapper {
-    width: 100%;    /* 也可以固定宽度 */
+<head>
+<title>ACTTAO 监控</title>
+<style>
+.wrapper {
+    width: 100%;
     height: 900px;
- 
+    margin: 4px;
 }
 .wrapper > div {
-    display: inline-block;    /* 如需支持IE8以下版本，用浮动来做 */
-    width: calc(100% / 2.10);    /* 此处运用了一个css3的表达式，将div三等分，IE8及以上可以支持，当然也可以根据需要设置固定值 */
-    width: -webkit-calc(100% / 2.10); /*3.09 排除margin的宽度*/
+    display: inline-block;
+    width: calc(100% / 2.10);
+    width: -webkit-calc(100% / 2.10);
     width: -moz-calc(100% / 2.10);
     height: calc(100% / 2.10);
     height: -webkit-calc(100% / 2.10);
@@ -20,103 +20,55 @@
     padding: 10px;
     margin: 1px;
 }
-    </style>
-    <script type="text/javascript" src="static/js/jquery.min.js"></script>
-    <script type="text/javascript" src="static/js/highcharts.js"></script>
-    <script tpye="text/javascript">
-	    (function($){
-            $.extend({
-                RefreshToUnix: function(string){
-                    var f = string.slice(-1);
-                    var d = string.slice(0, -1);
-                    if(f === 'm'){
-                        return parseInt(d) * 60 * 1000;
-                    }
-                    if(f === 's'){
-                        return parseInt(d) * 1000;
-                    }
-                }
-            });
-        })(jQuery);
+</style>
+<script type="text/javascript" src="static/js/jquery.min.js"></script>
+<script type="text/javascript" src="static/js/highcharts.js"></script>
+<script tpye="text/javascript">
+(function($){
+    $.extend({
+        RefreshToUnix: function(string){
+            var f = string.slice(-1);
+            var d = string.slice(0, -1);
+            if(f === 'm'){
+                return parseInt(d) * 60 * 1000;
+            }
+            if(f === 's'){
+                return parseInt(d) * 1000;
+            }
+        } 
+    });
+})(jQuery);
 
-        $(document).ready(function(){
-            setInterval(function(){
-                var lefttop_data = {
-                    "time_start": Date.parse(new Date()) - $.RefreshToUnix($(".wrapper>#lefttop>#time_before option:selected").val()),
-                    "time_end": Date.parse(new Date()),
-                    "monitor_name": "{{ monitor_names.1 }}",
-                    "interval": $(".wrapper>#lefttop>#time_interval option:selected").val()
-                };
-                $.ajax({
-                    "type": "POST",
-                    "dataType": "json",
-                    "url": "/api/post_profile_data",
-                    "data": lefttop_data,
-                    "success": function(result) {
-                        $('#container').show();
-                        eval("$('#container1').highcharts("+JSON.parse(result)+")");
-                    }    
-                });
-            }, $.RefreshToUnix($(".wrapper>#lefttop>#time_refresh option:selected").val()));
+function dorefresh(time_start, time_end, monitor_names, interval, container){
+    var data = {
+        "time_start": time_start,
+        "time_end": time_end,
+        "monitor_name": monitor_names,
+        "interval": interval
+    };
+    $.ajax({
+        "type": "POST",
+        "dataType": "json",
+        "url": "/api/post_profile_data",
+        "data": data,
+        "success": function(result) {
+            $('#container').show();
+            eval(container+".highcharts("+JSON.parse(result)+")");
+        }    
+    });
+};
 
-            setInterval(function(){
-                var righttop_data = {
-                    "time_start": Date.parse(new Date()) - $.RefreshToUnix($(".wrapper>#righttop>#time_before option:selected").val()),
-                    "time_end": Date.parse(new Date()),
-                    "monitor_name": "{{ monitor_names.2 }}",
-                "interval": $(".wrapper>#righttop>#time_interval option:selected").val()
-                };
-                $.ajax({
-                    "type": "POST",
-                    "dataType": "json",
-                    "url": "/api/post_profile_data",
-                    "data": righttop_data,
-                    "success": function(result) {
-                        $('#container').show();
-                        eval("$('#container2').highcharts("+JSON.parse(result)+")");
-                    }    
-                });
-            }, $.RefreshToUnix($(".wrapper>#righttop>#time_refresh option:selected").val()));
-
-            setInterval(function(){
-                var leftbottom_data = {
-                    "time_start": Date.parse(new Date()) - $.RefreshToUnix($(".wrapper>#leftbottom>#time_before option:selected").val()),
-                    "time_end": Date.parse(new Date()),
-                    "monitor_name": "{{ monitor_names.3 }}",
-                    "interval": $(".wrapper>#leftbottom>#time_interval option:selected").val()
-                };
-                $.ajax({
-                    "type": "POST",
-                    "dataType": "json",
-                    "url": "/api/post_profile_data",
-                    "data": leftbottom_data,
-                    "success": function(result) {
-                        $('#container').show();
-                        eval("$('#container3').highcharts("+JSON.parse(result)+")");
-                    }    
-                });
-            }, $.RefreshToUnix($(".wrapper>#leftbottom>#time_refresh option:selected").val()));
-
-            setInterval(function(){
-                var rightbottom_data = {
-                    "time_start": Date.parse(new Date()) - $.RefreshToUnix($(".wrapper>#rightbottom>#time_before option:selected").val()),
-                    "time_end": Date.parse(new Date()),
-                    "monitor_name": "{{ monitor_names.4 }}",
-                    "interval": $(".wrapper>#rightbottom>#time_interval option:selected").val()
-                };
-                $.ajax({
-                    "type": "POST",
-                    "dataType": "json",
-                    "url": "/api/post_profile_data",
-                    "data": rightbottom_data,
-                    "success": function(result) {
-                        $('#container').show();
-                        eval("$('#container4').highcharts("+JSON.parse(result)+")");
-                    }    
-                });
-            }, $.RefreshToUnix($(".wrapper>#rightbottom>#time_refresh option:selected").val()));
-        });
-    </script>
+$(document).ready(function(){
+    dorefresh(Date.parse(new Date()) - $.RefreshToUnix($(".wrapper>#lefttop>#time_before option:selected").val()), Date.parse(new Date()), "{{ monitor_names.1 }}", $(".wrapper>#lefttop>#time_interval option:selected").val(), "$('#container1')");
+    setInterval("dorefresh(Date.parse(new Date()) - $.RefreshToUnix($(\".wrapper>#lefttop>#time_before option:selected\").val()), Date.parse(new Date()), \"{{ monitor_names.1 }}\", $(\".wrapper>#lefttop>#time_interval option:selected\").val(), \"$('#container1')\")", $.RefreshToUnix($(".wrapper>#lefttop>#time_refresh option:selected").val()));
+    dorefresh(Date.parse(new Date()) - $.RefreshToUnix($(".wrapper>#righttop>#time_before option:selected").val()), Date.parse(new Date()), "{{ monitor_names.2 }}", $(".wrapper>#righttop>#time_interval option:selected").val(), "$('#container2')");
+    setInterval("dorefresh(Date.parse(new Date()) - $.RefreshToUnix($(\".wrapper>#righttop>#time_before option:selected\").val()), Date.parse(new Date()), \"{{ monitor_names.2 }}\", $(\".wrapper>#righttop>#time_interval option:selected\").val(), \"$('#container2')\")", $.RefreshToUnix($(".wrapper>#righttop>#time_refresh option:selected").val()));
+    dorefresh(Date.parse(new Date()) - $.RefreshToUnix($(".wrapper>#leftbottom>#time_before option:selected").val()), Date.parse(new Date()), "{{ monitor_names.3 }}", $(".wrapper>#leftbottom>#time_interval option:selected").val(), "$('#container3')");
+    setInterval("dorefresh(Date.parse(new Date()) - $.RefreshToUnix($(\".wrapper>#leftbottom>#time_before option:selected\").val()), Date.parse(new Date()), \"{{ monitor_names.3 }}\", $(\".wrapper>#leftbottom>#time_interval option:selected\").val(), \"$('#container3')\")", $.RefreshToUnix($(".wrapper>#leftbottom>#time_refresh option:selected").val()));
+    dorefresh(Date.parse(new Date()) - $.RefreshToUnix($(".wrapper>#rightbottom>#time_before option:selected").val()), Date.parse(new Date()), "{{ monitor_names.4 }}", $(".wrapper>#rightbottom>#time_interval option:selected").val(), "$('#container4')");
+    setInterval("dorefresh(Date.parse(new Date()) - $.RefreshToUnix($(\".wrapper>#rightbottom>#time_before option:selected\").val()), Date.parse(new Date()), \"{{ monitor_names.4 }}\", $(\".wrapper>#rightbottom>#time_interval option:selected\").val(), \"$('#container4')\")", $.RefreshToUnix($(".wrapper>#rightbottom>#time_refresh option:selected").val()));
+});
+</script>
 </head>
 <body>
     <div class="wrapper">
