--- a/visualization/templates/manage_pic.html
+++ b/visualization/templates/manage_pic.html
@@ -7,6 +7,7 @@
 <div class='main_window'>
     <link href="static/css/select_monitor.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="static/js/post_modify.js"></script>
+    <input type="button" value='添加图表'/>
     <ul>
         {% for monitor_name in monitor_names.object_list %}
         <li class="monitor_name">{{ monitor_name }}</li>
