修改：      admin/urls.py 	修改：      visualization/elasticsedata.py 	修改：      visualization/static/css/map.css 	修改：      visualization/static/js/conf_dashboard.js 	修改：      visualization/static/js/map.js 	修改：      visualization/templates/base_map.html 	修改：      visualization/templates/dashboard1.html 	修改：      visualization/templates/dashboard2.html 	修改：      visualization/templates/time_select_small.html 	修改：      visualization/views.py

--- a/visualization/templates/dashboard2.html
+++ b/visualization/templates/dashboard2.html
@@ -43,11 +43,17 @@
         RefreshToUnix: function(string){
             var f = string.slice(-1);
             var d = string.slice(0, -1);
+            if(f === 's'){
+                return parseInt(d) * 1000;
+            }
             if(f === 'm'){
                 return parseInt(d) * 60 * 1000;
             }
-            if(f === 's'){
-                return parseInt(d) * 1000;
+            if(f === 'h'){
+                return parseInt(d) * 60 * 60 * 1000;
+            }
+            if(f === 'w'){
+                return parseInt(d) * 60 * 60 * 7 *1000;
             }
         } 
     });
